--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=05919df6fc57"
   },
   "eslintConfig": {
     "extends": [
@@ -57,8 +58,11 @@
     "@storybook/react-webpack5": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromatic": "chromatic --project-token=$CHROMATIC_PROJECT_TOKEN",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.6",
     "webpack": "^5.80.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "prac-js-react@0.1.0"
 }
